--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,16 +22,15 @@ rocketmq.producer.retryTimesWhenSendFailed=2
 rocketmq.consumer.isOnOff=on
 rocketmq.consumer.groupName=balanceSum
 #mq的nameserver地址
-rocketmq.consumer.namesrvAddr=39.106.195.18:9876
+rocketmq.consumer.namesrvAddr=39.106.195.18:9876;
 #该消费者订阅的主题和tags("*"号表示订阅该主题下所有的tags),格式：topic~tag1||tag2||tag3;topic2~*;
-rocketmq.consumer.topics=localhost~tagA||tagB||tagC;yh~*
+rocketmq.consumer.topics=localhost~balanceSum||tagC;yh~*;
 #rocketmq.consumer.topics=localhost
 rocketmq.consumer.consumeThreadMin=20
 rocketmq.consumer.consumeThreadMax=64
 #设置一次消费消息的条数，默认为1条
 rocketmq.consumer.consumeMessageBatchMaxSize=1
 
-logging.config=classpath:log4j2.xml
 
 #请求
 balanceSum.url=http://115.182.230.164:17101/BalanceSum.do
